# VariableClaw

./: OPEN_CLAW_COMPLETE_IMPLEMENTATION.md  app.json  jest.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
app/: _layout.tsx  index.tsx  remote.tsx  settings.tsx  voice.tsx
modules/bluetooth-hid/: package.json  react-native.config.js
modules/bluetooth-hid/android/: build.gradle
modules/bluetooth-hid/android/src/main/: AndroidManifest.xml
modules/bluetooth-hid/android/src/main/java/com/openclaw/bluetoothhid/: BluetoothHIDModule.java  BluetoothHIDPackage.java  PhoneCommandModule.java  VoiceRecognitionModule.java
modules/bluetooth-hid/src/: index.ts
modules/on-device-llm/: package.json  react-native.config.js
modules/on-device-llm/android/: build.gradle
modules/on-device-llm/android/src/main/: AndroidManifest.xml
modules/on-device-llm/android/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
modules/on-device-llm/src/: index.ts
plugins/: with-native-modules.js
scripts/: setup-llama.sh
src/__tests__/__mocks__/: async-storage.ts  react-native.ts
src/__tests__/constants/: keycodes.test.ts
src/__tests__/services/: BluetoothHID.test.ts  CommandRouter.test.ts  KeyboardMapper.test.ts  OnDeviceLLM.test.ts  PhoneCommands.test.ts  TVAppRegistry.test.ts
src/components/: AILockOverlay.tsx  AnimatedBackground.tsx  CommandLog.tsx  ConnectedDevicesBar.tsx  DeviceCard.tsx  FadeInView.tsx  GlassCard.tsx  ScalePress.tsx  StatusBadge.tsx  VoiceButton.tsx
src/constants/: keycodes.ts  theme.ts
src/hooks/: useAIGate.ts  useBluetooth.ts  useMemory.ts  useOrchestrator.ts  useSettings.ts  useVoiceRecognition.ts
src/services/: BluetoothHID.ts  CommandRouter.ts  ContextManager.ts  EventBus.ts  KeyboardMapper.ts  MemoryService.ts  OllamaService.ts  OnDeviceLLM.ts  PhoneCommands.ts  TVAppRegistry.ts
src/services/agents/: AgentOrchestrator.ts  BaseAgent.ts  CommandExecutionAgent.ts  ConversationAgent.ts  DeviceConnectionAgent.ts  DeviceTypeDetectorAgent.ts  RoutineAgent.ts  SmartSuggestionAgent.ts  VoiceCommandAgent.ts  index.ts
src/types/: agents.ts  index.ts
(+2 files in other folders)
